--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
       <li><a href="#">cafe</a></li>
       <li><a href="#">events</a></li>
     </ul>
+    <button class="close-menu" onclick="menuClickClose()">X</button>
     <div class="menu-icon">
-      <i class="ri-menu-4-fill"></i>
+      <i class="ri-menu-4-fill" onclick="menuClickOpen()"></i>
     </div>
+  </div>
+  <div class="mobile-menu">
+    <ul>
+      <li><a href="#">Troptracer range</a></li>
+      <li><a href="#">Golf lessons</a></li>
+      <li><a href="#">Adventure golf</a></li>
+      <li><a href="#">cafe</a></li>
+      <li><a href="#">events</a></li>
+    </ul>
   </div>
   <div class="cursor"></div>
   <div class="cursor-blur"></div>
